--- a/style.css
+++ b/style.css
@@ -975,6 +975,16 @@ body.dark .work-links img {
 .skills-img {
   block-size: 135px;
   inline-size: 135px;
+  
+}
+
+.skills img {
+  height: 150px;
+  width: 150px;
+}
+
+.skills i {
+  font-size: 150px;
 }
 
 @media (max-width: 1100px) {
